@@ -1,3 +1,8 @@
+2011-11-20  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/51194
+	* g++.dg/cpp0x/alias-decl-15.C: New test.
+
 2011-11-19  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/51216
