@@ -1,3 +1,9 @@
+2011-11-20  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/51194
+	* pt.c (lookup_template_class_1): Go out early if the type of the
+	template is error_mark_node.
+
 2011-11-19  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/51216
